test_suite5/ALAN/test_suite/alan-2022-examples/failing/007270_mutation.alan
source J begin put "\"" and end
